updated prod config

--- a/default.conf
+++ b/default.conf
@@ -20,11 +20,11 @@ server {
     }  
 
     location /adminportal {
-        proxy_pass http://192.168.128.9:4000;
+        proxy_pass http://admin-frontend:4000;
     }
 
     location /portal {
-        proxy_pass http://192.168.128.6:3000;
+        proxy_pass http://frontend:3000;
     }
 
     # location ~ ^/api/app {
