added extra locations

--- a/default.conf
+++ b/default.conf
@@ -27,6 +27,15 @@ server {
         proxy_pass http://frontend:3000;
     }
 
+    location /smtp/ {
+        rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
+        proxy_pass http://papercut:8085;
+    }
+
+    location /adminer/ {
+        proxy_pass http://impact24-adminer-1:9093;
+    }
+
     # location ~ ^/api/app {
     #     proxy_pass http://192.168.128.6:3000;                                                                      
     # }  
