fixed smtp nginx location

--- a/default.conf
+++ b/default.conf
@@ -29,7 +29,11 @@ server {
 
     location /smtp/ {
         rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
-        proxy_pass http://papercut:8085;
+        proxy_pass http://192.168.128.1:8085;
+    }    
+    
+    location /api/messages/ {
+        proxy_pass http://192.168.128.1:8085;
     }
 
     location /adminer/ {
