--- a/default.conf
+++ b/default.conf
@@ -5,11 +5,6 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
@@ -19,22 +14,18 @@ server {
         root   /usr/share/nginx/html;
     }  
 
-    location /adminportal {
-        proxy_pass http://admin-frontend:4000;
-    }
-
-    location /portal {
+    location / {
         proxy_pass http://frontend:3000;
     }
 
-    location /smtp/ {
-        rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
-        proxy_pass http://192.168.128.1:8085;
-    }    
+    # location /smtp/ {
+    #     rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
+    #     proxy_pass http://192.168.128.1:8085;
+    # }    
     
-    location /api/messages/ {
-        proxy_pass http://192.168.128.1:8085;
-    }
+    # location /api/messages/ {
+    #     proxy_pass http://192.168.128.1:8085;
+    # }
 
     location /adminer/ {
         proxy_pass http://impact24-adminer-1:9093;
