--- a/default.conf
+++ b/default.conf
@@ -18,6 +18,10 @@ server {
         proxy_pass http://frontend:3000;
     }
 
+    location ~ ^/(_next|__next) {
+        proxy_pass http://frontend:3000;                                                                      
+    }  
+
     # location /smtp/ {
     #     rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
     #     proxy_pass http://192.168.128.1:8085;
