updated smtp host

--- a/default.conf
+++ b/default.conf
@@ -18,18 +18,18 @@ server {
         proxy_pass http://frontend:3000;
     }
 
-    location ~ ^/(_next|__next) {
+    location /(_next|__next) {
         proxy_pass http://frontend:3000;                                                                      
     }  
 
-    # location /smtp/ {
-    #     rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
-    #     proxy_pass http://192.168.128.1:8085;
-    # }    
+    location /smtp/ {
+        rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
+        proxy_pass http://host.docker.internal:8085;
+    }    
     
-    # location /api/messages/ {
-    #     proxy_pass http://192.168.128.1:8085;
-    # }
+    location /api/messages/ {
+        proxy_pass http://host.docker.internal:8085;
+    }
 
     location /adminer/ {
         proxy_pass http://impact24-adminer-1:9093;
