--- a/default.conf
+++ b/default.conf
@@ -24,11 +24,11 @@ server {
 
     location /smtp/ {
         rewrite ^/smtp/(.*)$ /$1 break;  # Strip the /smtp/ prefix
-        proxy_pass http://host.docker.internal:8085;
+        proxy_pass http://172.17.0.1:8085;
     }    
     
     location /api/messages/ {
-        proxy_pass http://host.docker.internal:8085;
+        proxy_pass http://172.17.0.1:8085;
     }
 
     location /adminer/ {
