--- a/default.conf
+++ b/default.conf
@@ -32,7 +32,7 @@ server {
     }
 
     location /adminer/ {
-        proxy_pass http://impact24-adminer-1:9093;
+        proxy_pass http://database:9093;
     }
 
     # location ~ ^/api/app {
