--- a/default.conf
+++ b/default.conf
@@ -32,7 +32,7 @@ server {
     }
 
     location /adminer/ {
-        proxy_pass http://adminer-1:9093;
+        proxy_pass http://adminer:9093;
     }
 
     # location ~ ^/api/app {
